--- a/css/main.css
+++ b/css/main.css
@@ -1464,6 +1464,7 @@ fieldset[disabled] .navbar .navbar-nav > a.btn.active {
 .btn-primary {
   background-color: #000000;
   color: #ffffff;
+  border: 1px solid white;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -2119,7 +2120,7 @@ fieldset[disabled] .btn-link.active {
   border: 1px solid #2a2a2a;
   box-shadow: none;
   outline: 0 !important;
-  color: #2c2c2c;
+  color: #ffffff;
 }
 .form-control:focus + .input-group-addon,
 .form-control:focus ~ .input-group-addon {
@@ -2341,8 +2342,8 @@ fieldset[disabled] .btn-link.active {
 }
 
 .input-group-focus .input-group-addon {
-  background-color: #ffffff;
-  border-color: #378c3f;
+  background-color: #000000;
+  border-color: #000000;
 }
 
 .input-group-focus.form-group-no-border .input-group-addon {
